# cv-claw

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  SCHEMA.md  pyproject.toml
.claude/skills/create-template/assets/starter/: starter.html.j2
.claude/skills/cv-claw/: SKILL.md
.claude/skills/cv-claw/references/: create-template.md  ingest.md  kind-renderers.md
.claude/skills/ingest-resume/: SKILL.md
.claude/skills/pr-message/: SKILL.md
.github/workflows/: release.yml
skills/create-template/: SKILL.md
skills/create-template/assets/starter/: starter.css
skills/create-template/references/: template-anatomy.md
skills/cv-claw/: SKILL.md
skills/cv-claw/references/: create-template.md  ingest.md  schema.md  tailor.md  tailoring-guide.md  tweak-template.md
skills/ingest-resume/: SKILL.md
skills/tailor-resume/: SKILL.md
src/cvclaw/: __init__.py  cli.py  render.py  schema.py  templates_loader.py
src/cvclaw/examples/: example.json
src/cvclaw/templates/classic/: _macros.html.j2  classic.css
templates/classic/: _macros.html.j2  classic.html.j2
